--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pi Alpha Phi</title>
+    <title>Pi Alpha Phi | Xi Chapter</title>
     <link rel="shortcut icon" type="image/png" href="./resources/brotherhoodlinks.png"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -10,8 +10,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style/style.css">
   </head>
-  <body>
+  <body data-spy="scroll" data-target="#page-nav" data-offset="80">
     <div class="container-fluid"></div>
   </body>
   <script src="/bundle.js"></script>
+  <script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 </html>
