--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/style/style.css">
   </head>
   <body data-spy="scroll" data-target="#page-nav" data-offset="80">
-    <div class="container-fluid"></div>
+    <div class="container-fluid" id="pg"></div>
   </body>
   <script src="/bundle.js"></script>
   <script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
